add bootstrap styles and photos

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
-    </main>
+<!DOCTYPE html>
+<html>
 
-  </body>
+<body>
+<footer class="footer">
+	<p>JWood's epic app &copy; 2017 </p> 
+</footer>
+</body>
 </html>
