--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,87 @@
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Seasonal Wardrobe Capsules</title>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:300i,400,600" rel="stylesheet">
+</head>
+
+<body>
+
 <% include ./partials/header.ejs %>
-Welcome
-<% include ./partials/footer.ejs %>
+
+<!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Header -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header header1">Choose Your Season
+                </h1>
+                <h4 class="header4">Simplify your wardrobe!  Plan your shopping sprees around your upcoming seasonal needs.</h4>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Seasons Row -->
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="./images/spring.jpg" alt="Spring Photo">
+                </a>
+                <h3>
+                    <a class = "season" href="#">Spring</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="./images/summer 2.jpg" alt="Summer Photo">
+                </a>
+                <h3>
+                    <a class = "season" href="#">Summer</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Seasons Row -->
+        <div class="row">
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="./images/fall.jpg"alt="">
+                </a>
+                <h3>
+                    <a class = "season" href="#">Fall</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-6 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="./images/winter.jpg" alt="">
+                </a>
+                <h3>
+                    <a class = "season" href="#">Winter</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+
+</body>
+
+<footer class="footerIndex">
+<% include ./partials/footer.ejs %>	
+
+</footer>
+
+</html>
+
