--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Seasonal Wardrobe Capsules</title>
   <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -16,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Seasonal Wardrobe Capsules</a>
+        <a class="navbar-brand navBar" href="/">Seasonal Wardrobe Capsules</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,8 +26,8 @@
         <% if (currentUser) {%>
         <li><a href="/logout">Logout <%= currentUser.local.email %></a></li>
         <% } else { %>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Signup</a></li> 
+        <li class = "login"><a href="/login">Login</a></li>
+        <li class= "signup"><a href="/signup">Signup</a></li> 
         <% } %>
       </ul>
     </div><!-- /.navbar-collapse -->
