--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,14 @@
+<head>
+  <meta charset="utf-8">
+  <title>Seasonal Wardrobe Capsules</title>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:300i,400,600" rel="stylesheet">
+
+</head>
+
+<body>
+
 <% include ./partials/header.ejs %>
 <% if (message.length >0) { %>
 	<div class="alert alert-danger"><%= message %></div>
@@ -17,4 +28,9 @@
 
   <input class="btn btn-default" type="submit">
 </form>
+
+</body>
+
+<footer class="footer">
 <% include ./partials/footer.ejs %>
+</footer>
