add spring page route

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-<footer class="footer">
-	<p>JWood's epic app &copy; 2017 </p> 
+<footer class=”footer”>
+ <div class=”container”>
+ <p class=”text-center text-muted”>© JWood Epic App | Copyright 2017</p>
+ </div>
 </footer>
-</body>
-</html>
