--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,16 @@
 <head>
   <meta charset="utf-8">
   <title>Seasonal Wardrobe Capsules</title>
-  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <!-- Stylesheets -->
+  	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
+
+	<!-- Vendors -->
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:300i,400,600" rel="stylesheet">
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+	<!-- Application scripts -->
+	 <script src="js/client.js"></script>
 </head>
 
 <body>
@@ -30,11 +37,11 @@
         <!-- Seasons Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+              <!--   <a href="#"> -->
                     <img class="img-responsive" src="./images/spring.jpg" alt="Spring Photo">
                 </a>
                 <h3>
-                    <a class = "season" href="#">Spring</a>
+                    <a class = "season" id="springClick" href="/spring">Spring</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
@@ -54,7 +61,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="./images/fall.jpg"alt="">
+                    <img class="img-responsive" src="./images/fall.jpg" alt="Fall Photo">
                 </a>
                 <h3>
                     <a class = "season" href="#">Fall</a>
@@ -63,7 +70,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="./images/winter.jpg" alt="">
+                    <img class="img-responsive" src="./images/winter.jpg" alt="Winter Photo">
                 </a>
                 <h3>
                     <a class = "season" href="#">Winter</a>
