--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -21,6 +21,10 @@
                 <h1 class="page-header header1">Your Spring Capsule
                 </h1>
                 <h4 class="header4">Here are the items on your Spring wardrobe list!  Remove items that you don't want on your shopping list by clicking the button</h4>
+
+                <div class="products">
+                	
+                </div>
             </div>
         </div>
 </body>
