--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
                     <img class="img-responsive" src="./images/summer 2.jpg" alt="Summer Photo">
                 </a>
                 <h3>
-                    <a class = "season" href="#">Summer</a>
+                    <a class = "season" href="/summer">Summer</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
