--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -12,20 +12,83 @@
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	 
 	<!-- Application scripts -->
-	 <script src="js/client.js"></script>
+	 <script src="js/spring.js"></script>
 </head>
 <body>
+<!-- Page Content -->
+    <div class="container">
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header header1">Your Spring Capsule
+                <h1 class="page-header header1">Your Spring Capsule Shopping Queue
                 </h1>
-                <h4 class="header4">Here are the items on your Spring wardrobe list!  Remove items that you don't want on your shopping list by clicking the button</h4>
-
-                <div class="products">
-                	
-                </div>
+                <h4 class="header4">Here are the items on your Spring wardrobe list!  Remove items that you don't want on your shopping list by clicking remove.</h4>
             </div>
         </div>
+            <div class="row">
+                    <div class="clothesCategory col-lg-12">
+                    <h2>Dresses</h2>
+                    </div>
+                <div class="col-xs-12 col-md-3">
+                <div class="card-deck clothesRow">
+                      <div class="card dress1">
+                        <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                        <div class="card-block">
+                          <h4 class="card-title">Card title</h4>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                         <a href="#" class="btn btn-primary">Go to Item</a>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                 <div class="col-xs-12 col-md-3">
+                        <div class="card-deck clothesRow">
+                          <div class="card dress2">
+                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                            <div class="card-block">
+                              <h4 class="card-title">Card title</h4>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <a href="#" class="btn btn-primary">Go to Item</a>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-3">
+                        <div class="card-deck clothesRow">
+                          <div class="card dress2">
+                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                            <div class="card-block">
+                              <h4 class="card-title">Card title</h4>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <a href="#" class="btn btn-primary">Go to Item</a>
+                           
+                          </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-3">
+                        <div class="card-deck clothesRow">
+                          <div class="card dress3">
+                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                            <div class="card-block">
+                              <h4 class="card-title">Card title</h4>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <a href="#" class="btn btn-primary">Got to Item</a>
+                            
+                          </div>
+                      </div>
+                  </div>
+                </div>
+                      
+                      
+                
+
+            </div>
+
+                                    	
+              
+           
+        </div>
+    </div>
 </body>
 </html>
