--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -22,7 +22,7 @@
             <div class="col-lg-12">
                 <h1 class="page-header header1">Your Spring Capsule Shopping Queue
                 </h1>
-                <h4 class="header4">Here are the items on your Spring wardrobe list!  Remove items that you don't want on your shopping list by clicking remove.</h4>
+                <h4 class="header4">Here are the items on your Spring wardrobe list!</h4>
             </div>
         </div>
             <div class="row">
@@ -32,10 +32,10 @@
                 <div class="col-xs-12 col-md-3">
                 <div class="card-deck clothesRow">
                       <div class="card dress1">
-                        <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="" alt="Card image cap">
                         <div class="card-block">
-                          <h4 class="card-title">Card title</h4>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h4 class="card-title dress1"></h4>
+                          <p class="card-text"></p>
                          <a href="#" class="btn btn-primary">Go to Item</a>
                         </div>
                       </div>
@@ -44,10 +44,10 @@
                  <div class="col-xs-12 col-md-3">
                         <div class="card-deck clothesRow">
                           <div class="card dress2">
-                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="" alt="Card image cap">
                             <div class="card-block">
-                              <h4 class="card-title">Card title</h4>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <h4 class="card-title"></h4>
+                              <p class="card-text"></p>
                               <a href="#" class="btn btn-primary">Go to Item</a>
                           </div>
                       </div>
@@ -55,11 +55,11 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                         <div class="card-deck clothesRow">
-                          <div class="card dress2">
-                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                          <div class="card dress3">
+                            <img class="card-img-top" src="" alt="Card image cap">
                             <div class="card-block">
-                              <h4 class="card-title">Card title</h4>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <h4 class="card-title"></h4>
+                              <p class="card-text"></p>
                               <a href="#" class="btn btn-primary">Go to Item</a>
                            
                           </div>
@@ -68,27 +68,18 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                         <div class="card-deck clothesRow">
-                          <div class="card dress3">
-                            <img class="card-img-top" src="https://img.shopstyle-cdn.com/mim/df/99/df998eb301d04eb61293073ba8aea8bd.jpg" alt="Card image cap">
+                          <div class="card dress4">
+                            <img class="card-img-top" src="" alt="Card image cap">
                             <div class="card-block">
-                              <h4 class="card-title">Card title</h4>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              <a href="#" class="btn btn-primary">Got to Item</a>
+                              <h4 class="card-title"></h4>
+                              <p class="card-text"></p>
+                              <a href="#" class="btn btn-primary">Go to Item</a>
                             
                           </div>
                       </div>
                   </div>
                 </div>
-                      
-                      
-                
-
             </div>
-
-                                    	
-              
-           
-        </div>
-    </div>
+                 
 </body>
 </html>
