--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -4,82 +4,152 @@
 	<title>Spring Capsule</title>
 
   <!-- Stylesheets -->
-  	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 
-	<!-- Vendors -->
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:300i,400,600" rel="stylesheet">
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	 
-	<!-- Application scripts -->
-	 <script src="js/spring.js"></script>
+  <!-- Vendors -->
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:300i,400,600" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+  <!-- Application scripts -->
+  <script src="js/spring.js"></script>
 </head>
 <body>
-<!-- Page Content -->
-    <div class="container">
-        <!-- Page Header -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header header1">Your Spring Capsule Shopping Queue
-                </h1>
-                <h4 class="header4">Here are the items on your Spring wardrobe list!</h4>
+  <!-- Page Content -->
+  <div class="container">
+    <!-- Page Header -->
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header header1">Your Spring Capsule Shopping Queue
+        </h1>
+        <h4 class="header4">Here are the items on your Spring wardrobe list!</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="clothesCategory col-lg-12">
+        <h2>Dresses</h2>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card dress1">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title dress1"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
             </div>
+          </div>
         </div>
-            <div class="row">
-                    <div class="clothesCategory col-lg-12">
-                    <h2>Dresses</h2>
-                    </div>
-                <div class="col-xs-12 col-md-3">
-                <div class="card-deck clothesRow">
-                      <div class="card dress1">
-                        <img class="card-img-top" src="" alt="Card image cap">
-                        <div class="card-block">
-                          <h4 class="card-title dress1"></h4>
-                          <p class="card-text"></p>
-                         <a href="#" class="btn btn-primary">Go to Item</a>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-                 <div class="col-xs-12 col-md-3">
-                        <div class="card-deck clothesRow">
-                          <div class="card dress2">
-                            <img class="card-img-top" src="" alt="Card image cap">
-                            <div class="card-block">
-                              <h4 class="card-title"></h4>
-                              <p class="card-text"></p>
-                              <a href="#" class="btn btn-primary">Go to Item</a>
-                          </div>
-                      </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-3">
-                        <div class="card-deck clothesRow">
-                          <div class="card dress3">
-                            <img class="card-img-top" src="" alt="Card image cap">
-                            <div class="card-block">
-                              <h4 class="card-title"></h4>
-                              <p class="card-text"></p>
-                              <a href="#" class="btn btn-primary">Go to Item</a>
-                           
-                          </div>
-                      </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-3">
-                        <div class="card-deck clothesRow">
-                          <div class="card dress4">
-                            <img class="card-img-top" src="" alt="Card image cap">
-                            <div class="card-block">
-                              <h4 class="card-title"></h4>
-                              <p class="card-text"></p>
-                              <a href="#" class="btn btn-primary">Go to Item</a>
-                            
-                          </div>
-                      </div>
-                  </div>
-                </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card dress2">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
             </div>
-                 
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card dress3">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card dress4">
+            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              
+              <a href="#" class="btn btn-primary ">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+    <hr>
+
+    <div class="row">
+      <div class="clothesCategory col-lg-12">
+        <h2>Tops</h2>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card top1">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title dress1"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card top2">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card top3">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card top4">
+            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              
+              <a href="#" class="btn btn-primary ">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+  </div>
+
 </body>
 </html>
