add shoes to spring collection

--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -149,6 +149,135 @@
 
 
     </div>
+
+        <hr>
+
+    <div class="row">
+      <div class="clothesCategory col-lg-12">
+        <h2>Pants</h2>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card pant1">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title dress1"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card pant2">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card pant3">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card pant4">
+            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              
+              <a href="#" class="btn btn-primary ">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+
+          <hr>
+
+    <div class="row">
+      <div class="clothesCategory col-lg-12">
+        <h2>Shoes</h2>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card shoe1">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title dress1"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card shoe2">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card shoe3">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card shoe4">
+            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
+              
+              <a href="#" class="btn btn-primary ">Go to Item</a>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+
   </div>
 
 </body>
