--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -15,6 +15,7 @@
   <script src="js/spring.js"></script>
 </head>
 <body>
+<% include ./partials/header.ejs %>
   <!-- Page Content -->
   <div class="container">
     <!-- Page Header -->
@@ -28,15 +29,17 @@
     <div class="row">
       <div class="clothesCategory col-lg-12">
         <h2>Dresses</h2>
+
       </div>
+     
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress1">
-            <img class="card-img-top" src="" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title dress1"></h4>
               <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Go to Item</a>
+              <a href="#" class="btn btn-primary">Go to Item</a> <button type="button" name="button" class="deleteBtn btn btn-primary" data-id=" ">Remove Item</button>
             </div>
           </div>
         </div>
@@ -44,7 +47,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress2">
-            <img class="card-img-top" src="" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -56,7 +59,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress3">
-            <img class="card-img-top" src="" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -71,7 +74,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress4">
-            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <img class="card-img-top img-responsive" src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -91,7 +94,9 @@
     <div class="row">
       <div class="clothesCategory col-lg-12">
         <h2>Tops</h2>
+         <hr>
       </div>
+     
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card top1">
@@ -155,7 +160,9 @@
     <div class="row">
       <div class="clothesCategory col-lg-12">
         <h2>Pants</h2>
+        <hr>
       </div>
+      
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card pant1">
@@ -219,6 +226,7 @@
     <div class="row">
       <div class="clothesCategory col-lg-12">
         <h2>Shoes</h2>
+         <hr>
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
