add season dummy pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,4 +91,10 @@
   background: #86A4AB;
  }
 
+ p.seasonblurb {
+    font-family: 'Josefin Slab', serif;
+    font-weight: 400;
+    font-size: 18px;
+ }
+
 
