--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
                 <h3>
                     <a class = "season" id="springClick" href="/spring">Spring</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class = "seasonblurb">Spring is the season for color and floral prints!  Check out your current Spring capsule.</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
@@ -52,7 +52,7 @@
                 <h3>
                     <a class = "season" href="/summer">Summer</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class = "seasonblurb">Summer months inspire us with happy colors and sunshine.  Check out your current Summer capsule.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -64,18 +64,18 @@
                     <img class="img-responsive" src="./images/fall.jpg" alt="Fall Photo">
                 </a>
                 <h3>
-                    <a class = "season" href="#">Fall</a>
+                    <a class = "season" href="/fall">Fall</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class = "seasonblurb">Fall is for earthy tones and cozy scarves.  Check out your current Fall capsule. </p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="./images/winter.jpg" alt="Winter Photo">
                 </a>
                 <h3>
-                    <a class = "season" href="#">Winter</a>
+                    <a class = "season" href="/winter">Winter</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class = "seasonblurb">Cold weather calls for layers and comfy sweaters!  Check out your current Winter capsule.</p>
             </div>
         </div>
         <!-- /.row -->
