--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,17 +7,17 @@
   <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navHead">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <div class="navbar-header ">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand navBar" href="/">Seasonal Wardrobe Capsules</a>
+        <a class="navbar-brand navBar navHead " href="/">Seasonal Wardrobe Capsules</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
