--- a/views/spring.ejs
+++ b/views/spring.ejs
@@ -47,7 +47,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress2">
-            <img class="card-img-top" src="" alt="Dress Photo">
+            <img class="card-img-top " src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -59,7 +59,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress3">
-            <img class="card-img-top" src="" alt="Dress Photo">
+            <img class="card-img-top " src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -74,7 +74,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card dress4">
-            <img class="card-img-top img-responsive" src="" alt="Dress Photo">
+            <img class="card-img-top " src="" alt="Dress Photo">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -139,7 +139,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card top4">
-            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <img class="card-img-top " src="" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -205,7 +205,7 @@
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
           <div class="card pant4">
-            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
@@ -230,10 +230,10 @@
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
-          <div class="card shoe1">
+          <div class="card shoe">
             <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title dress1"></h4>
+              <h4 class="card-title "></h4>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Go to Item</a>
             </div>
@@ -242,23 +242,23 @@
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
-          <div class="card shoe2">
-            <img class="card-img-top" src="" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title"></h4>
-              <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Go to Item</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-3">
-        <div class="card-deck clothesRow">
-          <div class="card shoe3">
+          <div class="card shoe">
             <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go to Item</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="card-deck clothesRow">
+          <div class="card shoe">
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"></h4>
+              <p class="card-text"></p>
 
               <a href="#" class="btn btn-primary">Go to Item</a>
             </div>
@@ -269,8 +269,8 @@
       </div>
       <div class="col-xs-12 col-md-3">
         <div class="card-deck clothesRow">
-          <div class="card shoe4">
-            <img class="card-img-top img-responsive" src="" alt="Card image cap">
+          <div class="card shoe">
+            <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title"></h4>
               <p class="card-text"></p>
